[gd_scene load_steps=7 format=3 uid="uid://bhla3lmhp48cb"]

[ext_resource type="Script" path="res://Characters/Rin/portal.gd" id="1_2bkot"]
[ext_resource type="PackedScene" uid="uid://cansug0y4q86t" path="res://Characters/Hitboxes/grabbox.tscn" id="2_7d4q3"]
[ext_resource type="Texture2D" uid="uid://c422o1xgaxl4e" path="res://Characters/Rin/bkackportal.png" id="2_roi0b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gkpr"]
size = Vector2(19, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cubv5"]
size = Vector2(20, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pp1hv"]
size = Vector2(6, 16.5)

[node name="Portal" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_2bkot")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 3)
scale = Vector2(0.453125, 0.153125)
texture = ExtResource("2_roi0b")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_7gkpr")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="ConnectionBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionBox"]
shape = SubResource("RectangleShape2D_cubv5")

[node name="Swords" type="Node2D" parent="."]

[node name="Grabbox" parent="." instance=ExtResource("2_7d4q3")]
command_grab = true

[node name="CollisionShape2D" parent="Grabbox" index="0"]
position = Vector2(0, -7.25)
shape = SubResource("RectangleShape2D_pp1hv")
debug_color = Color(0.0941176, 0.639216, 0.313726, 0.419608)

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="area_entered" from="ConnectionBox" to="." method="_on_connection_box_area_entered"]

[editable path="Grabbox"]
